Fix related tags overflow in detachable tag edit dialog (#3219).
Fixes these issues with the detachable tag edit dialog:

* Moving the edit dialog then expanding the related tags causes the
related tags to overflow outside the dialog.

* Expanding the related tags, moving the edit dialog, then collapsing
the tags causes the dialog to not resize back to its minimized size.

--- a/app/assets/stylesheets/common/jquery_ui_custom.scss
+++ b/app/assets/stylesheets/common/jquery_ui_custom.scss
@@ -1,4 +1,5 @@
 div.ui-dialog {
+  height: auto! important;
   overflow: visible;
   font-size: 1em;
   z-index: 999 !important;
